[workspace]
members = [
    "cli",
    "crates/*",
    "crates/codederror/derive",
    "server",
    "benchmarks",
    "tools/bifrost-benchpress",
    "tools/mock-service-endpoint",
    "tools/restatectl",
    "tools/service-protocol-wireshark-dissector",
    "tools/xtask",
]
default-members = [
    "cli",
    "crates/*",
    "crates/codederror/derive",
    "server",
    "tools/restatectl",
]
resolver = "2"

[workspace.package]
version = "1.1.0"
authors = ["restate.dev"]
edition = "2021"
rust-version = "1.75"
license = "BUSL-1.1"
repository = "https://github.com/restatedev/restate"
description = "Restate makes distributed applications easy!"

[workspace.dependencies]
# Own crates
codederror = { path = "crates/codederror" }
restate-admin = { path = "crates/admin" }
restate-admin-rest-model = { path = "crates/admin-rest-model" }
restate-base64-util = { path = "crates/base64-util" }
restate-bifrost = { path = "crates/bifrost" }
restate-cli-util = { path = "crates/cli-util" }
restate-core = { path = "crates/core" }
restate-errors = { path = "crates/errors" }
restate-fs-util = { path = "crates/fs-util" }
restate-futures-util = { path = "crates/futures-util" }
restate-ingress-dispatcher = { path = "crates/ingress-dispatcher" }
restate-ingress-http = { path = "crates/ingress-http" }
restate-ingress-kafka = { path = "crates/ingress-kafka" }
restate-invoker-api = { path = "crates/invoker-api" }
restate-invoker-impl = { path = "crates/invoker-impl" }
restate-log-server = { path = "crates/log-server" }
restate-metadata-store = { path = "crates/metadata-store" }
restate-node = { path = "crates/node" }
restate-partition-store = { path = "crates/partition-store" }
restate-queue = { path = "crates/queue" }
restate-rocksdb = { path = "crates/rocksdb" }
restate-serde-util = { path = "crates/serde-util" }
restate-server = { path = "server" }
restate-service-client = { path = "crates/service-client" }
restate-service-protocol = { path = "crates/service-protocol" }
restate-storage-api = { path = "crates/storage-api" }
restate-storage-query-datafusion = { path = "crates/storage-query-datafusion" }
restate-storage-query-postgres = { path = "crates/storage-query-postgres" }
restate-test-util = { path = "crates/test-util" }
restate-timer = { path = "crates/timer" }
restate-timer-queue = { path = "crates/timer-queue" }
restate-tracing-instrumentation = { path = "crates/tracing-instrumentation" }
restate-types = { path = "crates/types" }
restate-wal-protocol = { path = "crates/wal-protocol" }
restate-worker = { path = "crates/worker" }

# External crates
ahash = "0.8.5"
anyhow = "1.0.68"
arc-swap = "1.6"
arrow = { version = "50.0.0", default-features = false }
arrow-flight = { version = "50.0.0" }
assert2 = "0.3.11"
async-channel = "2.1.1"
async-trait = "0.1.73"
axum = { version = "0.7.5", default-features = false }
base64 = "0.22"
bytes = { version = "1.3", features = ["serde"] }
bytes-utils = "0.1.3"
bytestring = { version = "1.2", features = ["serde"] }
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
comfy-table = { version = "7.1" }
chrono-humanize = { version = "0.2.3" }
clap = { version = "4", default-features = false }
clap-verbosity-flag = { version = "2.0.1" }
cling = { version = "0.1", default-features = false, features = ["derive"] }
criterion = "0.5"
crossterm = { version = "0.27.0" }
dashmap = { version = "5.5.3" }
datafusion = { git = "https://github.com/restatedev/datafusion.git", tag = "35.0.0-object-store", default-features = false, features = ["crypto_expressions", "encoding_expressions", "regex_expressions", "unicode_expressions"] }
derive-getters = {  version = "0.4.0" }
derive_builder = "0.20.0"
derive_more = { version = "0.99.17" }
dialoguer = { version = "0.11.0" }
enum-map = { version = "2.7.3" }
enumset = { version = "1.1.3" }
flexbuffers = { version = "2.0.0" }
futures = "0.3.25"
futures-sink = "0.3.25"
futures-util = "0.3.25"
googletest = "0.10"
hostname = { version = "0.4.0" }
http = "1.1.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
http-serde = { version = "2.1.1" }
humantime = "2.1.0"
hyper = { version = "1.4.1", default-features = false }
hyper-rustls = { version = "0.27.2", default-features = false, features = ["http1", "http2", "ring", "native-tokio", "tls12", "logging"] }
hyper-util = { version = "0.1" }
itertools = "0.13.0"
metrics = { version = "0.23" }
metrics-exporter-prometheus = { version = "0.15", default-features = false, features = ["async-runtime"] }
once_cell = "1.18"
opentelemetry = { version = "0.22.0" }
opentelemetry-http = { version = "0.11.1" }
opentelemetry_sdk = { version = "0.22.1" }
parking_lot = { version = "0.12" }
paste = "1.0"
pin-project = "1.0"
prost = "0.12.1"
prost-build = "0.12.1"
prost-dto = { version = "0.0.2" }
prost-types = "0.12.1"
rand = "0.8.5"
rayon = { version = "1.10" }
regress = { version = "0.10" }
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls", "stream"] }
rlimit = { version = "0.10.1" }
rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"], git = "https://github.com/restatedev/rust-rocksdb", rev="c7ccbbcd261bdec011c4976c441676512a1a4841" }
rustls = {version = "0.23.11", default-features = false, features = ["ring"]}
schemars = { version = "0.8", features = ["bytes", "enumset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8"
serde_yaml = "0.9"
sha2 = "0.10.8"
smartstring = { version = "1.0.1" }
static_assertions = { version = "1.1.0" }
strum = { version = "0.26.1" }
strum_macros = { version = "0.26.1" }
sync_wrapper = "1.0.1"
smallvec = { version = "1.13.2", features = ["serde"] }
tempfile = "3.6.0"
test-log = { version = "0.2.11", default-features = false, features = ["trace"] }
# tikv-jemallocator has not yet been released with musl target support, so we pin a main commit
tikv-jemallocator = { git = "https://github.com/restatedev/jemallocator", rev = "7c32f6e3d6ad5e4e492cc08d6bdb8307acf9afa0", default-features = false }
thiserror = "1.0"
tokio = { version = "1.29", default-features = false, features = ["rt-multi-thread", "signal", "macros", ] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10" }
tonic = { version = "0.10.2", default-features = false }
tonic-reflection = { version = "0.10.2" }
tonic-health = "0.10.2"
tonic-build = "0.11.0"
tower = "0.4"
tower-http = { version = "0.5.2", default-features = false }
tracing = "0.1"
tracing-opentelemetry = { version = "0.23.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-test = { version = "0.2.4" }
ulid = { version = "1.1.0" }
url = { version = "2.5" }
uuid = { version = "1.3.0", features = ["v7", "serde"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
# Let's be defensive and abort on every panic
panic = "abort"

[profile.release-debug]
inherits = "release"
debug = true

[profile.dev]
# Let's be defensive and abort on every panic
panic = "abort"

[profile.release.package.service-protocol-wireshark-dissector]
opt-level = "z" # Optimize for size.
strip = true    # Automatically strip symbols from the binary.

[profile.bench]
# Should be enabled for benchmarking runs; increases binary size
debug = true
