[workspace]
members = [
    "cli",
    "crates/*",
    "crates/core/derive",
    "crates/encoding/derive",
    "crates/codederror/derive",
    "server",
    "lite",
    "benchmarks",
    "tools/bifrost-benchpress",
    "tools/mock-service-endpoint",
    "tools/restatectl",
    "tools/service-protocol-wireshark-dissector",
    "tools/xtask",
    "workspace-hack",
]
default-members = [
    "cli",
    "crates/*",
    "crates/core/derive",
    "crates/codederror/derive",
    "server",
    "tools/restatectl",
]
resolver = "2"

[workspace.package]
version = "1.6.0-dev"
authors = ["restate.dev"]
edition = "2024"
rust-version = "1.88.0"
license = "BUSL-1.1"
repository = "https://github.com/restatedev/restate"
homepage = "https://github.com/restatedev/restate"
description = "Restate makes distributed applications easy!"

[workspace.dependencies]
# Own crates
codederror = { path = "crates/codederror" }
mock-service-endpoint = { path = "tools/mock-service-endpoint" }
restate-admin = { path = "crates/admin" }
restate-admin-rest-model = { path = "crates/admin-rest-model" }
restate-base64-util = { path = "crates/base64-util" }
restate-bifrost = { path = "crates/bifrost" }
restate-cli-util = { path = "crates/cli-util" }
restate-cloud-tunnel-client = { path = "crates/cloud-tunnel-client" }
restate-core = { path = "crates/core" }
restate-core-derive = { path = "crates/core/derive" }
restate-encoding = { path = "crates/encoding" }
restate-errors = { path = "crates/errors" }
restate-fs-util = { path = "crates/fs-util" }
restate-futures-util = { path = "crates/futures-util" }
restate-hyper-uds = { path = "crates/hyper-uds" }
restate-ingress-http = { path = "crates/ingress-http" }
restate-ingress-kafka = { path = "crates/ingress-kafka" }
restate-invoker-api = { path = "crates/invoker-api" }
restate-invoker-impl = { path = "crates/invoker-impl" }
restate-local-cluster-runner = { path = "crates/local-cluster-runner" }
restate-log-server = { path = "crates/log-server" }
restate-log-server-grpc = { path = "crates/log-server-grpc" }
restate-metadata-providers = { path = "crates/metadata-providers" }
restate-metadata-server = { path = "crates/metadata-server" }
restate-metadata-server-grpc = { path = "crates/metadata-server-grpc" }
restate-metadata-store = { path = "crates/metadata-store" }
restate-node = { path = "crates/node" }
restate-object-store-util = { path = "crates/object-store-util" }
restate-partition-store = { path = "crates/partition-store" }
restate-queue = { path = "crates/queue" }
restate-rocksdb = { path = "crates/rocksdb" }
restate-serde-util = { path = "crates/serde-util" }
restate-server = { path = "server" }
restate-lite = { path = "lite" }
restate-service-client = { path = "crates/service-client" }
restate-service-protocol = { path = "crates/service-protocol" }
restate-service-protocol-v4 = { path = "crates/service-protocol-v4" }
restate-storage-api = { path = "crates/storage-api" }
restate-storage-query-datafusion = { path = "crates/storage-query-datafusion" }
restate-test-util = { path = "crates/test-util" }
restate-time-util = { path = "crates/time-util" }
restate-timer = { path = "crates/timer" }
restate-timer-queue = { path = "crates/timer-queue" }
restate-tracing-instrumentation = { path = "crates/tracing-instrumentation" }
restate-types = { path = "crates/types" }
restate-utoipa = { path = "crates/utoipa" }
restate-wal-protocol = { path = "crates/wal-protocol" }
restate-worker = { path = "crates/worker" }

# this workspace-hack package is overridden by a patch below to use workspace-hack subdir when building in this repo
# outside this repo, the crates.io restate-workspace-hack (an empty package) will be used instead
restate-workspace-hack = "0.0.1"

# External crates
ahash = "0.8.5"
anyhow = "1.0.68"
arc-swap = "1.7"
arrow = { version = "56.1.0", default-features = false }
assert2 = "0.3.11"
async-channel = "2.3.1"
async-trait = "0.1.88"
axum = { version = "0.8.4", default-features = false }
aws-config = "1.8.0"
aws-credential-types = "1.2.2"
aws-smithy-async = { version = "1.2.5", default-features = false }
aws-smithy-runtime-api = "1.7.4"
aws-smithy-types = "1.3.0"
base64 = "0.22"
bilrost = { version = "0.1014" }
bincode = { version = "2.0.1", default-features = false }
bitflags = { version = "2.6.0" }
bytes = { version = "1.7", features = ["serde"] }
bytes-utils = "0.1.3"
bytesize = { version = "2.0.1" }
bytestring = { version = "1.2", features = ["serde"] }
ciborium = { version = "0.2.2" }
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
comfy-table = { version = "7.1" }
chrono-humanize = { version = "0.2.3" }
clap = { version = "4", default-features = false }
clap-verbosity-flag = { version = "3.0.2" }
clap_complete = { version = "4.5" }
cling = { version = "0.1.3", default-features = false, features = ["derive"] }
criterion = "0.5"
crossterm = { version = "0.29.0" }
dashmap = { version = "6" }
datafusion = { version = "50.0.0", default-features = false, features = [
    "crypto_expressions",
    "encoding_expressions",
    "regex_expressions",
    "unicode_expressions",
    "recursive_protection",
] }
datafusion-expr = { version = "50.0.0" }
derive_builder = "0.20.0"
derive_more = { version = "2.0.1", features = ["full"] }
dialoguer = { version = "0.11.0" }
downcast-rs = { version = "2.0.1" }
enum-map = { version = "2.7.3" }
enumset = { version = "1.1.3" }
etcd-client = { version = "0.14" }
flexbuffers = { version = "25.2.10" }
futures = "0.3.25"
futures-sink = "0.3.25"
futures-util = "0.3.25"
gardal = "0.0.1-alpha.7"
googletest = { version = "0.10", features = ["anyhow"] }
hostname = { version = "0.4.0" }
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.2"
http-serde = { version = "2.1.1" }
humantime = "2.1.0"
hyper = { version = "1.6.0", default-features = false }
hyper-rustls = { version = "0.27.2", default-features = false, features = [
    "http1",
    "http2",
    "ring",
    "native-tokio",
    "tls12",
    "logging",
] }
hyper-util = { version = "0.1" }
indexmap = "2.7"
itertools = "0.14.0"
jiff = "0.2.14"
jsonschema = { version = "0.28.3", default-features = false }
metrics = { version = "0.24" }
metrics-exporter-prometheus = { version = "0.17", default-features = false, features = [
    "async-runtime",
] }
metrics-util = { version = "0.20.0" }
moka = "0.12.5"
mockall = { version = "0.13.1" }
num-traits = { version = "0.2.17" }
object_store = { version = "0.12.2", features = ["aws"] }
opentelemetry = { version = "0.30" }
opentelemetry-contrib = { version = "0.22" }
opentelemetry-http = { version = "0.30" }
opentelemetry-otlp = { version = "0.30" }
opentelemetry-semantic-conventions = { version = "0.30" }
opentelemetry_sdk = { version = "0.30" }
parking_lot = { version = "0.12" }
paste = "1.0"
pin-project = "1.0"
pin-project-lite = { version = "0.2" }
prost = { version = "0.14.1" }
prost-build = { version = "0.14.1" }
priority-queue = "2.0.3"
prost-dto = { version = "0.0.3" }
prost-types = { version = "0.14.1" }
rand = "0.9.0"
rangemap = "1.5.1"
rayon = { version = "1.10" }
regex = { version = "1.11" }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
rlimit = { version = "0.10.1" }
rocksdb = { version = "0.43.0", package = "rust-rocksdb", features = [
    "multi-threaded-cf",
    "jemalloc",
], git = "https://github.com/restatedev/rust-rocksdb", rev = "de8911652d398e9bfbb6bbc42a7b4f7296f6d101" }
rstest = "0.24.0"
rustls = { version = "0.23.26", default-features = false, features = ["ring"] }
schemars = { version = "0.8", features = ["bytes", "enumset"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8"
serde_yaml = "0.9"
sha2 = "0.10.8"
smartstring = { version = "1.0.1" }
static_assertions = { version = "1.1.0" }
strum = { version = "0.27.1", features = ["derive"] }
sync_wrapper = "1.0.1"
smallvec = { version = "1.15.1", features = ["serde", "union"] }
tempfile = "3.6.0"
test-log = { version = "0.2.11", default-features = false, features = [
    "trace",
] }
tikv-jemallocator = { version = "0.6", features = [
    "unprefixed_malloc_on_supported_platforms",
    "profiling",
] }
tikv-jemalloc-sys = { version = "0.6", features = ["profiling"] }
thiserror = "2.0"
tokio = { version = "1.47.0", default-features = false, features = [
    "rt-multi-thread",
    "signal",
    "macros",
    "parking_lot",
] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.14" }
toml = { version = "0.8.23" }
tonic = { version = "0.14.2", default-features = false }
tonic-reflection = { version = "0.14.2" }
tonic-health = { version = "0.14.2" }
tonic-prost = "0.14.2"
tonic-prost-build = { version = "0.14.2" }
tower = "0.5.2"
tower-http = { version = "0.6.2", default-features = false }
tracing = { version = "0.1" }
tracing-opentelemetry = { version = "0.31.0" }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "parking_lot",
] }
tracing-test = { version = "0.2.5" }
typed-builder = "0.21.0"
ulid = { version = "1.2.0" }
url = { version = "2.5" }
urlencoding = { version = "2.1" }
uuid = { version = "1.3.0", features = ["v7", "serde"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zstd = { version = "0.13" }

[patch.crates-io.restate-workspace-hack]
path = "workspace-hack"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "unwind"

[profile.release-debug]
inherits = "release"
debug = true

[profile.dev]
panic = "unwind"

[profile.release.package.service-protocol-wireshark-dissector]
opt-level = "z" # Optimize for size.
strip = true    # Automatically strip symbols from the binary.

[profile.bench]
# Should be enabled for benchmarking runs; increases binary size
debug = true

[profile.dev.package.tikv-jemalloc-sys]
opt-level = 2

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
