[package]
name = "restate-benchmarks"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = []
frame-pointer = ["pprof/frame-pointer"]

[dependencies]
restate-core = { workspace = true }
restate-node = { workspace = true }
restate-rocksdb = { workspace = true }
restate-server = { workspace = true }
restate-types = { workspace = true, features = ["clap"] }

anyhow = { workspace = true }
arc-swap = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }
reqwest = { workspace = true }
rlimit = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }
rand = { workspace = true }

[build-dependencies]

[[bench]]
name = "throughput_parallel"
harness = false

[[bench]]
name = "throughput_sequential"
harness = false
