[package]
name = "restate-cli"
version = { workspace = true }
authors = { workspace = true }
description = "Restate CLI"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = false
default-run = "restate"
build = "build.rs"

[package.metadata.dist]
dist = true
formula = "restate"

[features]
default = ["cloud", "no-trace-logging"]
cloud = []
no-trace-logging = ["tracing/max_level_trace", "tracing/release_max_level_debug"]

[dependencies]
restate-admin-rest-model = { workspace = true }
restate-cli-util = { workspace = true }
restate-serde-util = { workspace = true }
restate-types = { workspace = true }

anyhow = { workspace = true }
arc-swap = { workspace = true }
arrow = { version = "53.1.0", features = ["ipc", "prettyprint", "json"] }
arrow_convert = { version = "0.7.2" }
axum = { workspace = true, default-features = false, features = ["http1", "http2", "query", "tokio"] }
bytes = { workspace = true }
base62 = { version = "2.0.2" }
base64 = { workspace = true }
bs58 = { version = "0.5.0" }
chrono = { workspace = true }
chrono-humanize = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "wrap_help", "color", "std", "suggestions", "usage"] }
clap-verbosity-flag = { workspace = true }
cling = { workspace = true }
comfy-table = { workspace = true }
const_format = "0.2.32"
convert_case = "0.6"
crossterm = { workspace = true }
ctrlc = { version = "3.4.1" }
dialoguer = { workspace = true }
dirs = { version = "5.0" }
figment = { version = "0.10.8", features = ["env", "toml"] }
futures = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["server", "http2"] }
hyper-rustls = { workspace = true, default-features = false, features = ["http1", "http2", "aws-lc-rs", "native-tokio", "tls12", "logging"]  }
hyper-util = { workspace = true, features = ["client-legacy", "http2", "server", "client", "tokio"] }
indicatif = "0.17.7"
indoc = { version = "2.0.4" }
itertools = { workspace = true }
json-patch = "2.0.0"
jsonwebtoken = { version = "9.1.0" }
octocrab = { version = "0.44.0", features = ["stream"] }
open = "5.1.2"
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls", "stream", "http2"] }
rustls = { workspace = true, features = ["aws-lc-rs"]}
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["hex"] }
strum = { workspace = true }
sync_wrapper = { workspace = true, features = ["futures"] }
termcolor = { version = "1.4.0" }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tokio-util = { workspace = true }
toml = "0.8.15"
toml_edit = "0.22.12"
tower = { workspace = true }
tracing = { workspace = true }
typify = "0.1.0"
url = { workspace = true }
uuid = { workspace = true }
zip = "0.6"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
restate-cli-util = { workspace = true, features = ["test-util"] }

[build-dependencies]
vergen = { version = "8.0.0", default-features = false, features = [
    "build",
    "git",
    "gitcl",
    "cargo",
] }

[lib]
bench = false

[[bin]]
name = "restate"
path = "src/main.rs"
